--- a/Project/package.json
+++ b/Project/package.json
@@ -28,9 +28,13 @@
     "@angular/platform-browser": "^5.1.0",
     "@angular/platform-browser-dynamic": "^5.1.0",
     "@angular/router": "^5.1.0",
+    "angular-calendar": "^0.24.0",
     "core-js": "^2.4.1",
+    "fullcalendar": "^3.9.0",
     "google-auth-library": "^1.4.0",
     "googleapis": "^27.0.0",
+    "jquery": "^3.3.1",
+    "moment": "^2.22.1",
     "mongoose": "^5.0.14",
     "ng": "0.0.0-rc6",
     "rxjs": "^5.5.2",
@@ -41,8 +45,10 @@
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
+    "@ngtools/webpack": "^1.5.1",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
+    "@types/jquery": "^3.3.1",
     "@types/node": "~6.0.60",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.8.0",
@@ -53,7 +59,6 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "@ngtools/webpack": "^1.5.1",
     "protractor": "~5.1.2"
   }
 }
